...
            borderRadius: theme.presentation.cardRadius,
            borderWidth: theme.presentation.borderWidth,
          },
        ]}
      >
        <TextInput
          testID="editor.note.input"
          accessibilityLabel={t('note.label')}
          autoFocus={autoFocus}
          autoCapitalize="sentences"
          maxLength={300}
          multiline
          onBlur={onBlur}
...
